--- a/src/targets/mas_steekproef_zavelberg/targets_steekproef_zavelberg.Rmd
+++ b/src/targets/mas_steekproef_zavelberg/targets_steekproef_zavelberg.Rmd
@@ -450,8 +450,8 @@ list(
   tar_target(
     output_objecten,
     output_finaal(files = list(steekproefkader = steekproefkader_finaal, 
-                               steekproef = steekproef_nn),
-                  write_out = FALSE)
+                               steekproef = steekproef),
+                  write_out = TRUE)
   )
 )
 ```
