--- a/src/markdown/mas/steekproefontwerp_zandleemstreek.Rmd
+++ b/src/markdown/mas/steekproefontwerp_zandleemstreek.Rmd
@@ -1016,11 +1016,11 @@ Waar liggen de eerste 50, 100, 200 punten?
 
 ```{r}
 mapview(perimeters_data, color = "red", alpha.regions = 0, legend = FALSE) +
-  mapview(first_samples(steekproef, 200), alpha.regions = 1) +
-  mapview(first_samples(steekproef, 100), col.regions = "green", 
-          alpha.regions = 1) +
-  mapview(first_samples(steekproef, 50), col.regions = "red", 
-          alpha.regions = 1) 
+  mapview(first_samples(steekproef, 200) %>% st_buffer(dist = 300), alpha.regions = 1) +
+  mapview(first_samples(steekproef, 100) %>% st_buffer(dist = 300), 
+          col.regions = "green", alpha.regions = 1) +
+  mapview(first_samples(steekproef, 50) %>% st_buffer(dist = 300), 
+          col.regions = "red", alpha.regions = 1) 
 ```
 
 # Nabehandeling steekproef
