--- a/src/markdown/mas/analyse_veldleeuwerik.Rmd
+++ b/src/markdown/mas/analyse_veldleeuwerik.Rmd
@@ -2272,30 +2272,31 @@ stratum_cijfers_lijst_2022 <- lapply(seq_along(distance_dfs_2022_final),
              n_int_regio_sbp = !(min(n_interactie_regio) == 1 | n_sbp == FALSE)) %>%
       distinct(soort, n, n_regio, n_openheid, n_sbp, n_int_openheid_sbp, 
                n_int_regio_sbp)
-    
-     min_openheid_sbp <- distance_dfs_2022_final[[i]] %>% 
-       mutate(soort = names(distance_dfs_2022_final[i])) %>%
-       group_by(soort, openheid, sbp) %>% 
-       summarise(n = n(), .groups = "drop") %>%
-       pull(n) %>%
-       min()
      
-     min_regio_sbp <- distance_dfs_2022_final[[i]] %>% 
-       mutate(soort = names(distance_dfs_2022_final[i])) %>%
-       group_by(soort, regio, sbp) %>% 
-       summarise(n = n(), .groups = "drop") %>%
-       pull(n) %>%
-       min()
-     
-     if (min_openheid_sbp <= 11){
-       out$n_int_openheid_sbp <- FALSE
-     }
-     
-     if (min_regio_sbp <= 11){
-       out$n_int_regio_sbp <- FALSE
-     }
-    
-    return(out)
+   # Minimum 11 waarnemingen per stratum om interactie te fitten  
+   min_openheid_sbp <- distance_dfs_2022_final[[i]] %>% 
+     mutate(soort = names(distance_dfs_2022_final[i])) %>%
+     group_by(soort, openheid, sbp) %>% 
+     summarise(n = n(), .groups = "drop") %>%
+     pull(n) %>%
+     min()
+   
+   min_regio_sbp <- distance_dfs_2022_final[[i]] %>% 
+     mutate(soort = names(distance_dfs_2022_final[i])) %>%
+     group_by(soort, regio, sbp) %>% 
+     summarise(n = n(), .groups = "drop") %>%
+     pull(n) %>%
+     min()
+   
+   if (min_openheid_sbp <= 11){
+     out$n_int_openheid_sbp <- FALSE
+   }
+   
+   if (min_regio_sbp <= 11){
+     out$n_int_regio_sbp <- FALSE
+   }
+   
+  return(out)
   })
 
 stratum_cijfers_df_2022 <- do.call(rbind, stratum_cijfers_lijst_2022)
@@ -2531,6 +2532,8 @@ forms2 <- forms2[-match("~regio*openheid", forms2)]
 forms_2022 <- c("~1", forms1, forms2)
 ```
 
+Voor Buizerd en Winterkoning lukt het niet om ~regio+openheid en ~regio+sbp+openheid te fitten.
+
 ```{r}
 all_models_2022 <- list()
 all_model_2022_names <- c()
@@ -2542,12 +2545,11 @@ keys <- c("hn", "hr")
 model_path <- "./src/markdown/mas/distance_models/"
 
 # Verwijder
-index_to_remove <- which(names(distance_dfs_2022_final) %in% c("Buizerd", "Winterkoning",
-                                                               "ZwarteRoodstaart"))
+#index_to_remove <- which(names(distance_dfs_2022_final) %in% c("Winterkoning"))
 #[-index_to_remove]
 
 # Loop over species
-for (spec in names(distance_dfs_2022_final)[-index_to_remove]) {
+for (spec in names(distance_dfs_2022_final)) {
   distance_data_2022 <- distance_dfs_2022_final[[spec]]
   sample_table_2022 <- sample_tables_2022[[spec]]
   obs_table_2022 <- obs_tables_2022[[spec]]
@@ -2572,6 +2574,20 @@ for (spec in names(distance_dfs_2022_final)[-index_to_remove]) {
   }
   if (!pull(form_df[,"n_int_regio_sbp"])) {
     form_spec[sapply(form_spec, function(i) grepl("regio\\*sbp", i))] <- NULL
+  }
+  
+  # Complete separation
+  sep_df <- distance_data_2022 %>% 
+    group_by(regio, openheid) %>% 
+    summarise(n = sum(size))
+  if (nrow(sep_df) == 2) {
+    form_spec[sapply(form_spec, function(i) grepl("regio\\+openheid", i))] <- NULL
+    form_spec[sapply(form_spec, function(i) grepl("regio\\+sbp\\+openheid", i))] <- NULL
+  }
+  
+  if (spec %in% c("Buizerd", "Winterkoning")) {
+    form_spec[sapply(form_spec, function(i) grepl("regio\\+openheid", i))] <- NULL
+    form_spec[sapply(form_spec, function(i) grepl("regio\\+sbp\\+openheid", i))] <- NULL
   }
 
   # Loop over formules en over key functions
@@ -3109,5 +3125,214 @@ saveRDS(final_models_update, file = paste0(model_path, "models_2018_2022.rds"))
 ```
 
 ## Densiteitschattingen 2022
+
+### Model selectie per soort
+
+```{r, results = 'asis'}
+for (naam in names(all_models_2022)) {
+  titel <- paste(unlist(strsplit(naam, "(?<=[a-z])(?=[A-Z])", 
+                                 perl = TRUE)), collapse = " ")
+  print(
+  summarize_ds_models2(all_models_2022[[naam]]) %>%
+    kable(caption = titel)
+  )
+  cat("\n")
+}
+```
+
+```{r, eval=FALSE}
+final_models_complex <- list(Blauwborst = Blauwborst_distmod_2018_2022_hn1,
+                     Buizerd = Buizerd_distmod_2018_2022_hn1,
+                     Ekster = Ekster_distmod_2018_2022_hr1,
+                     Fazant = Fazant_distmod_2018_2022_hr1,
+                     Gaai = Gaai_distmod_2018_2022_hn1,
+                     Geelgors = Geelgors_distmod_2018_2022_hr1,
+                     GeleKwikstaart = GeleKwikstaart_distmod_2018_2022_hr3,
+                     Grasmus = Grasmus_distmod_2018_2022_hn1,
+                     GrauweGors = GrauweGors_distmod_2018_2022_hn1,
+                     GroeneSpecht = GroeneSpecht_distmod_2018_2022_hn1,
+                     Haas = Haas_distmod_2018_2022_hr1,
+                     Heggenmus = Heggenmus_distmod_2018_2022_hn1,
+                     Holenduif = Holenduif_distmod_2018_2022_hn1,
+                     Houtduif = Houtduif_distmod_2018_2022_hn3,
+                     Huismus = Huismus_distmod_2018_2022_hn3,
+                     Kauw = Kauw_distmod_2018_2022_hr1,
+                     Kievit = Kievit_distmod_2018_2022_hr1,
+                     KleineKarekiet = KleineKarekiet_distmod_2018_2022_hn1,
+                     Kneu = Kneu_distmod_2018_2022_hn1,
+                     Koolmees = Koolmees_distmod_2018_2022_hr1,
+                     Kwartel = Kwartel_distmod_2018_2022_hn1,
+                     Merel = Merel_distmod_2018_2022_hr1,
+                     Patrijs = Patrijs_distmod_2018_2022_hn1,
+                     Rietzanger = Rietzanger_distmod_2018_2022_hn1,
+                     Roek = Roek_distmod_2018_2022_hr1,
+                     Spotvogel = Spotvogel_distmod_2018_2022_hn1,
+                     Spreeuw = Spreeuw_distmod_2018_2022_hr1,
+                     Tjiftjaf = Tjiftjaf_distmod_2018_2022_hr2,
+                     Torenvalk = Torenvalk_distmod_2018_2022_hn1,
+                     TurkseTortel = TurkseTortel_distmod_2018_2022_hr1,
+                     Veldleeuwerik = Veldleeuwerik_distmod_2018_2022_hr4,
+                     Vink = Vink_distmod_2018_2022_hn1,
+                     WildeEend = WildeEend_distmod_2018_2022_hn1,
+                     Winterkoning = Winterkoning_distmod_2018_2022_hn1,
+                     WitteKwikstaart = WitteKwikstaart_distmod_2018_2022_hn1,
+                     ZwarteKraai = ZwarteKraai_distmod_2018_2022_hr1,
+                     Zwartkop = Zwartkop_distmod_2018_2022_hn1)
+```
+
+Soorten met finaal model zonder covariaten worden opnieuw gefit met de simpele dataset. Ook komen er enkele extra soorten bij met aantal 20-30 waarnemingen.
+
+```{r, eval=FALSE}
+# Welke soorten moeten niet opnieuw gefit worden?
+specs_to_remove <- lapply(seq_along(final_models_complex), function(i) {
+    soort <- names(final_models_complex)[i]
+    ds_model <- final_models_complex[[i]]
+    f <- ds_model$ddf$ds$aux$ddfobj$scale$formula
+    
+    if (f != "~1") {
+      return(soort)
+    } else {
+      return(NULL)
+    }
+  })
+specs_to_remove[sapply(specs_to_remove, is.null)] <- NULL
+specs_to_remove <- unlist(specs_to_remove)
+
+# Verwijder soorten uit simpele dataset
+distance_dfs_2018_2022_simpel_new <- 
+  distance_dfs_2018_2022_simpel[!names(distance_dfs_2018_2022_simpel) %in% 
+                                specs_to_remove]
+names(distance_dfs_2018_2022_simpel_new)
+```
+
+```{r, eval=FALSE}
+# Key functions
+keys <- c("hn", "hr")
+
+final_models_simpel <- list()
+final_models_simpel_names <- c()
+
+# Fit opnieuw met simpele dataset
+for (spec in names(distance_dfs_2018_2022_simpel_new)) {
+  distance_data_new <- distance_dfs_2018_2022_simpel_new[[spec]]
+  sample_table_2018_2022 <- sample_tables_2018_2022[[spec]]
+  obs_table_2018_2022 <- obs_tables_2018_2022[[spec]]
+  
+  out_models <- list()
+  model_names <- c()
+    
+  for (k in keys) {
+    # Naam voor model
+    mod_name <- paste0(spec, "_distmod_2018_2022_", k, 1, "_simpel")
+    file <- paste0(model_path, mod_name, ".rds")
+    
+    # Sla model op als het nog niet bestaat en lees het in anderzijds
+    if (file.exists(file)) {
+      det_model <- readRDS(file)
+      assign(mod_name, det_model)
+      print(paste0("Model '", mod_name, "' fitted. ", 
+                   "Formula: '", f, "'. Key: '", k, "'."))
+    } else {
+      det_model <- ds(data = distance_data_new, key = k, 
+        formula = ~1, max_adjustments = 2, 
+        monotonicity = "strict", 
+        truncation = 300, transect = "point", dht_group = FALSE, 
+        convert_units = conversion_factor_2018_2022, 
+        region_table = region_table_2018_2022, 
+        sample_table = sample_table_2018_2022, 
+        obs_table = obs_table_2018_2022)
+    }
+      
+    print(paste0("Model '", mod_name, "' fitted. ", 
+                 "Formula: '", f, "'. Key: '", k, "'."))
+    
+    # Sla gefitte model op
+    assign(mod_name, det_model)
+    saveRDS(det_model, file = file)
+    
+    # Put models and model names in list 
+    out_models <- c(out_models, list(det_model))
+    model_names <- c(model_names, mod_name)
+  }
+  names(out_models) <- model_names
+  
+  # Put models and model names in list 
+  final_models_simpel <- c(final_models_simpel, list(out_models))
+  final_models_simpel_names <- c(final_models_simpel_names, spec)
+}
+names(final_models_simpel) <- final_models_simpel_names
+```
+
+```{r, results = 'asis', eval=FALSE}
+for (naam in names(final_models_simpel)) {
+  titel <- paste(unlist(strsplit(naam, "(?<=[a-z])(?=[A-Z])", 
+                                 perl = TRUE)), collapse = " ")
+  print(
+  summarize_ds_models2(final_models_simpel[[naam]]) %>%
+    kable(caption = titel)
+  )
+  cat("\n")
+}
+```
+
+```{r, eval=FALSE}
+final_models <- list(
+  Blauwborst = Blauwborst_distmod_2018_2022_hr1_simpel,
+  Bosrietzanger = Bosrietzanger_distmod_2018_2022_hn1_simpel,
+  BruineKiekendief = BruineKiekendief_distmod_2018_2022_hn1_simpel,
+  Buizerd = Buizerd_distmod_2018_2022_hn1_simpel,
+  Ekster = Ekster_distmod_2018_2022_hr1_simpel,
+  Fazant = Fazant_distmod_2018_2022_hr1_simpel,
+  Gaai = Gaai_distmod_2018_2022_hn1_simpel,
+  Geelgors = Geelgors_distmod_2018_2022_hr1_simpel,
+  GeleKwikstaart = GeleKwikstaart_distmod_2018_2022_hr3,
+  Grasmus = Grasmus_distmod_2018_2022_hn1_simpel,
+  Graspieper = Graspieper_distmod_2018_2022_hn1_simpel,
+  GrauweGors = GrauweGors_distmod_2018_2022_hn1_simpel,
+  GroeneSpecht = GroeneSpecht_distmod_2018_2022_hn1_simpel,
+  Groenling = Groenling_distmod_2018_2022_hn1_simpel,
+  GroteBonteSpecht = GroteBonteSpecht_distmod_2018_2022_hn1_simpel,
+  Haas = Haas_distmod_2018_2022_hr1_simpel,
+  Heggenmus = Heggenmus_distmod_2018_2022_hn1_simpel,
+  Holenduif = Holenduif_distmod_2018_2022_hn1_simpel,
+  Houtduif = Houtduif_distmod_2018_2022_hn3,
+  Huismus = Huismus_distmod_2018_2022_hn3,
+  Kauw = Kauw_distmod_2018_2022_hn1_simpel,
+  Kievit = Kievit_distmod_2018_2022_hr1_simpel,
+  KleineKarekiet = KleineKarekiet_distmod_2018_2022_hn1_simpel,
+  Kneu = Kneu_distmod_2018_2022_hn1_simpel,
+  Knobbelzwaan = Knobbelzwaan_distmod_2018_2022_hn1_simpel,
+  Koolmees = Koolmees_distmod_2018_2022_hn1_simpel,
+  Kwartel = Kwartel_distmod_2018_2022_hn1_simpel,
+  Meerkoet = Meerkoet_distmod_2018_2022_hn1_simpel,
+  Merel = Merel_distmod_2018_2022_hr1_simpel,
+  Patrijs = Patrijs_distmod_2018_2022_hn1_simpel,
+  Pimpelmees = Pimpelmees_distmod_2018_2022_hn1_simpel,
+  Putter = Putter_distmod_2018_2022_hn1_simpel,
+  Rietgors = Rietgors_distmod_2018_2022_hn1_simpel,
+  Rietzanger = Rietzanger_distmod_2018_2022_hn1_simpel,
+  Ringmus = Ringmus_distmod_2018_2022_hr1_simpel,
+  Roek = Roek_distmod_2018_2022_hr1_simpel,
+  Roodborst = Roodborst_distmod_2018_2022_hn1_simpel,
+  Roodborsttapuit = Roodborsttapuit_distmod_2018_2022_hn1_simpel,
+  Spotvogel = Spotvogel_distmod_2018_2022_hn1_simpel,
+  Spreeuw = Spreeuw_distmod_2018_2022_hr1_simpel,
+  Tjiftjaf = Tjiftjaf_distmod_2018_2022_hr2,
+  Torenvalk = Torenvalk_distmod_2018_2022_hn1_simpel,
+  Tuinfluiter = Tuinfluiter_distmod_2018_2022_hn1_simpel,
+  TurkseTortel = TurkseTortel_distmod_2018_2022_hr1_simpel,
+  Veldleeuwerik = Veldleeuwerik_distmod_2018_2022_hr4,
+  Vink = Vink_distmod_2018_2022_hn1_simpel,
+  WildeEend = WildeEend_distmod_2018_2022_hn1_simpel,
+  Winterkoning = Winterkoning_distmod_2018_2022_hn1_simpel,
+  WitteKwikstaart = WitteKwikstaart_distmod_2018_2022_hn1_simpel,
+  Zanglijster = Zanglijster_distmod_2018_2022_hr1_simpel,
+  ZwarteKraai = ZwarteKraai_distmod_2018_2022_hr1_simpel,
+  ZwarteRoodstaart = ZwarteRoodstaart_distmod_2018_2022_hn1_simpel,
+  Zwartkop = Zwartkop_distmod_2018_2022_hn1_simpel)
+```
+
+### Model fit per soort
+
 
 # Referenties
