--- a/src/markdown/mas/analyse_veldleeuwerik.Rmd
+++ b/src/markdown/mas/analyse_veldleeuwerik.Rmd
@@ -3140,53 +3140,61 @@ for (naam in names(all_models_2022)) {
 }
 ```
 
-```{r, eval=FALSE}
-final_models_complex <- list(Blauwborst = Blauwborst_distmod_2018_2022_hn1,
-                     Buizerd = Buizerd_distmod_2018_2022_hn1,
-                     Ekster = Ekster_distmod_2018_2022_hr1,
-                     Fazant = Fazant_distmod_2018_2022_hr1,
-                     Gaai = Gaai_distmod_2018_2022_hn1,
-                     Geelgors = Geelgors_distmod_2018_2022_hr1,
-                     GeleKwikstaart = GeleKwikstaart_distmod_2018_2022_hr3,
-                     Grasmus = Grasmus_distmod_2018_2022_hn1,
-                     GrauweGors = GrauweGors_distmod_2018_2022_hn1,
-                     GroeneSpecht = GroeneSpecht_distmod_2018_2022_hn1,
-                     Haas = Haas_distmod_2018_2022_hr1,
-                     Heggenmus = Heggenmus_distmod_2018_2022_hn1,
-                     Holenduif = Holenduif_distmod_2018_2022_hn1,
-                     Houtduif = Houtduif_distmod_2018_2022_hn3,
-                     Huismus = Huismus_distmod_2018_2022_hn3,
-                     Kauw = Kauw_distmod_2018_2022_hr1,
-                     Kievit = Kievit_distmod_2018_2022_hr1,
-                     KleineKarekiet = KleineKarekiet_distmod_2018_2022_hn1,
-                     Kneu = Kneu_distmod_2018_2022_hn1,
-                     Koolmees = Koolmees_distmod_2018_2022_hr1,
-                     Kwartel = Kwartel_distmod_2018_2022_hn1,
-                     Merel = Merel_distmod_2018_2022_hr1,
-                     Patrijs = Patrijs_distmod_2018_2022_hn1,
-                     Rietzanger = Rietzanger_distmod_2018_2022_hn1,
-                     Roek = Roek_distmod_2018_2022_hr1,
-                     Spotvogel = Spotvogel_distmod_2018_2022_hn1,
-                     Spreeuw = Spreeuw_distmod_2018_2022_hr1,
-                     Tjiftjaf = Tjiftjaf_distmod_2018_2022_hr2,
-                     Torenvalk = Torenvalk_distmod_2018_2022_hn1,
-                     TurkseTortel = TurkseTortel_distmod_2018_2022_hr1,
-                     Veldleeuwerik = Veldleeuwerik_distmod_2018_2022_hr4,
-                     Vink = Vink_distmod_2018_2022_hn1,
-                     WildeEend = WildeEend_distmod_2018_2022_hn1,
-                     Winterkoning = Winterkoning_distmod_2018_2022_hn1,
-                     WitteKwikstaart = WitteKwikstaart_distmod_2018_2022_hn1,
-                     ZwarteKraai = ZwarteKraai_distmod_2018_2022_hr1,
-                     Zwartkop = Zwartkop_distmod_2018_2022_hn1)
+```{r}
+final_models_2022_complex <- list(
+  Buizerd = Buizerd_distmod_2022_hr1,
+  Ekster = Ekster_distmod_2022_hr1,
+  Fazant = Fazant_distmod_2022_hr7,
+  Gaai = Gaai_distmod_2022_hn1,
+  Geelgors = Geelgors_distmod_2022_hr1,
+  GeleKwikstaart = GeleKwikstaart_distmod_2022_hr1,
+  Grasmus = Grasmus_distmod_2022_hr10,
+  GrauweGors = GrauweGors_distmod_2022_hn1,
+  GroeneSpecht = GroeneSpecht_distmod_2022_hr1,
+  Groenling = Groenling_distmod_2022_hn1,
+  GroteBonteSpecht = GroteBonteSpecht_distmod_2022_hn1,
+  GroteLijster = GroteLijster_distmod_2022_hn1,
+  Haas = Haas_distmod_2022_hn3,
+  Heggenmus = Heggenmus_distmod_2022_hn1,
+  Holenduif = Holenduif_distmod_2022_hn1,
+  Houtduif = Houtduif_distmod_2022_hr7,
+  Huismus = Huismus_distmod_2022_hn6,
+  Kauw = Kauw_distmod_2022_hn1,
+  Kievit = Kievit_distmod_2022_hr1,
+  KleineKarekiet = KleineKarekiet_distmod_2022_hr1,
+  Kneu = Kneu_distmod_2022_hn6,
+  Koolmees = Koolmees_distmod_2022_hn1,
+  Kwartel = Kwartel_distmod_2022_hn1,
+  Meerkoet = Meerkoet_distmod_2022_hr1,
+  Merel = Merel_distmod_2022_hn7,
+  Pimpelmees = Pimpelmees_distmod_2022_hr1,
+  Rietzanger = Rietzanger_distmod_2022_hr1,
+  Ringmus = Ringmus_distmod_2022_hn1,
+  Roodborst = Roodborst_distmod_2022_hn1,
+  Roodborsttapuit = Roodborsttapuit_distmod_2022_hr1,
+  Spreeuw = Spreeuw_distmod_2022_hn1,
+  Tjiftjaf = Tjiftjaf_distmod_2022_hn2,
+  Torenvalk = Torenvalk_distmod_2022_hr5,
+  TurkseTortel = TurkseTortel_distmod_2022_hr1,
+  Veldleeuwerik = Veldleeuwerik_distmod_2022_hr7,
+  Vink = Vink_distmod_2022_hn8,
+  WildeEend = WildeEend_distmod_2022_hn1,
+  Winterkoning = Winterkoning_distmod_2022_hr8,
+  WitteKwikstaart = WitteKwikstaart_distmod_2022_hn2,
+  Zanglijster = Zanglijster_distmod_2022_hn2,
+  ZwarteKraai = ZwarteKraai_distmod_2022_hr3,
+  ZwarteRoodstaart = ZwarteRoodstaart_distmod_2022_hn2,
+  Zwartkop = Zwartkop_distmod_2022_hn2
+)
 ```
 
 Soorten met finaal model zonder covariaten worden opnieuw gefit met de simpele dataset. Ook komen er enkele extra soorten bij met aantal 20-30 waarnemingen.
 
 ```{r, eval=FALSE}
 # Welke soorten moeten niet opnieuw gefit worden?
-specs_to_remove <- lapply(seq_along(final_models_complex), function(i) {
-    soort <- names(final_models_complex)[i]
-    ds_model <- final_models_complex[[i]]
+specs_to_remove <- lapply(seq_along(final_models_2022_complex), function(i) {
+    soort <- names(final_models_2022_complex)[i]
+    ds_model <- final_models_2022_complex[[i]]
     f <- ds_model$ddf$ds$aux$ddfobj$scale$formula
     
     if (f != "~1") {
